--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -2,11 +2,11 @@
 // This is where the vast majority of your CSS code goes.
 // Font icon class
 .fa {
-    font-family: "FontAwesome";
+    font-family: "FontAwesome",  "Font Awesome 5 Free";
 }
 
 .fa-b {
-    font-family: "FontAwesomeBrands";
+    font-family: "FontAwesomeBrands", "Font Awesome 5 Brands";
 }
 // Common page class
 .page-content {
