--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,7 +18,7 @@
 
 
     <StackLayout style="padding: 15 20;">
-        <Image src="res://logong" style="width: 70%;margin-bottom: 20;margin-top: 20;" ios:style="margin-top: 50;"></Image>
+        <Image src="res://logong" style="width: 70%;margin-bottom: 20;" android:style="margin-top: 20;" ios:style="margin-top: 90;"></Image>
         <Label text="This app is built with NativeScript + Angular!" textWrap="true" style="color: #3949ab;font-size: 14; text-align: center;margin-bottom: 15;"
         verticalAlignment="center"></Label>
         <StackLayout class="hr-light m-10"></StackLayout>
