--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
 -->
 <RadSideDrawer [drawerTransition]="sideDrawerTransition">
     <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left">
-        <StackLayout row="0" class="sidedrawer-header" style="background-color: white;">
+        <StackLayout row="0" class="sidedrawer-header" style="background-color: white;margin-top: 20;">
            <Image src="res://logong" ></Image>
            
         </StackLayout>
