--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -16,5 +16,20 @@
 </ActionBar>
 
 <GridLayout class="page page-content">
+    <StackLayout style="padding: 10 5;">
+
+        <StackLayout *ngIf="infoItems$ | async as infoItems; else nocontent">
+                <ListView class="list-group" [items]="infoItems" style="height: 100%;" separatorColor="#ff1744">
+                        <ng-template let-item="item">
+            
+                            <InfoItem [item]="item"></InfoItem>
+            
+                        </ng-template>
+                    </ListView>
+        </StackLayout>
+        <ng-template #nocontent>
+                <ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+        </ng-template>
     
+</StackLayout>
 </GridLayout>
