--- a/src/app/schedule/components/event-item/event-item.component.html
+++ b/src/app/schedule/components/event-item/event-item.component.html
@@ -1,7 +1,7 @@
 <StackLayout width="100%" >
       
-    <GridLayout columns="75, *" rows="auto, 60" width="100%" height="auto" backgroundColor="#ffffff"
-        horizontalAlignment="center" verticalAlignment="top" style="padding: 10 5;">
+    <GridLayout columns="75, *, 75" rows="auto, 40, 10" width="100%" height="auto" backgroundColor="#ffffff"
+        horizontalAlignment="left" verticalAlignment="top" style="padding: 10 5;">
         <GridLayout columns="*" rows="auto, *" col="0" row="0" rowSpan="2">
             <Label [text]="eventItem.startDate | date:'HH:mm'" col="0" row="0" style="color: #3949ab;" textWrap="true"
                 verticalAlignment="top" textAlignment="center" fontSize="18"></Label>
@@ -10,31 +10,28 @@
         </GridLayout>
 
 
-        <Label [text]="eventItem.title" fontWeight="normal" fontSize="14" verticalAlignment="center" textAlignment="left"
+        <Label [text]="eventItem.title" fontWeight="bold" fontSize="14" verticalAlignment="center" textAlignment="left"
             textWrap="true" col="1" row="0" style="color: #3C4043;"></Label>
 
             
 
         <StackLayout col="1" row="1">
-              
-   
             <GridLayout columns="auto, auto, auto, *">
                 <Label col="0" row="0" class="fa" text="&#xf2f2;" verticalAlignment="center" textAlignment="center"
-                    style="color: #ff4d70; font-size: 18;margin-right: 10;"></Label>
-                <Label col="1" row="0" [text]="eventItem.getEventDuration()+' min'" textWrap="true" style="color: #3C4043;font-size: 13;margin-right: 30;"
+                    style="color: #80868B; font-size: 16;margin-right: 10;"></Label>
+                <Label col="1" row="0" [text]="eventItem.getEventDuration()+' min'" textWrap="true" style="color: #5F6368;font-size: 13;margin-right: 30;"
                     verticalAlignment="center" textAlignment="center"></Label>
-                <Label col="2" row="0" class="fa" text="&#xf007;" verticalAlignment="center" textAlignment="center"
-                    style="color: #ff4d70; font-size: 18;margin-right: 10;"></Label>
-                <Label col="3" row="0" [text]="eventItem.presenter?.name" textWrap="true" style="color: #3C4043;font-size: 12;"
+                <Label *ngIf="eventItem.presenter" col="2" row="0" class="fa" text="&#xf007;" verticalAlignment="center" textAlignment="center"
+                    style="color: #80868B; font-size: 16;margin-right: 10;"></Label>
+                <Label *ngIf="eventItem.presenter" col="3" row="0" [text]="eventItem.presenter?.name" textWrap="true" style="color: #5F6368;font-size: 12;"
                     verticalAlignment="center" textAlignment="left"></Label>
             </GridLayout>
 
-
-
-
-
-
         </StackLayout>
+
+        <Label [text]="eventItem.getEventItemIcon()" class="fa" fontWeight="normal" fontSize="18" 
+        verticalAlignment="center" textAlignment="center" horizontalAlignment="center"
+        textWrap="true" col="2" row="0" rowSpan="2" style="color: #ff8099;"></Label>
 
 
     </GridLayout>
