icons and images

--- a/src/app/schedule/components/event-item/event-item.component.html
+++ b/src/app/schedule/components/event-item/event-item.component.html
@@ -1,4 +1,4 @@
-<StackLayout width="100%" >
+<StackLayout width="100%" style="background-color: red;" >
       
     <GridLayout columns="75, *, 75" rows="auto, 40, 10" width="100%" height="auto" backgroundColor="#ffffff"
         horizontalAlignment="left" verticalAlignment="top" style="padding: 10 5;">
