--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,80 +13,77 @@
     </ActionItem>
     <Label class="action-bar-title" text="ngPolandConf" fontSize="18"></Label>
 </ActionBar>
-<ScrollView style="color: #3C4043;">
-
-    <GridLayout rows="*, *, *" columns="*, *" style="height: 100%;">
-        <StackLayout row="0" col="0" 
-        style="width: 100%;height: 100%;padding-left: 10;padding-right: 5; padding-top: 10; padding-bottom: 5;">
-            <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/schedule')" style="background-color: rgba(255, 23, 68, 0.80);">
-                <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                    <Label text="&#xf017;" class="fa" style="color: white;font-size: 68;"></Label>
-                </StackLayout>
-                <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                    <Label text="Schedule" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                </StackLayout>
-            </GridLayout>
+<ScrollView>
+    <GridLayout rows="120, *" columns="*" style="height: 100%;">
+        <StackLayout row="0" col="0" style="background-color: #3949ab;height: 120;width: 100%;" verticalAlignment="middle"
+            horizontalAlignment="center">
+            <Label text="Welcome to ngPoland Conference." style="color: white;font-size: 18;padding-left: 10;padding-right: 10;"
+                textWrap="true" textAlignment="center">
+            </Label>
+            <Label text="The biggest Angular Conference in CEE." style="color: white;font-size: 18;margin-top: 5;" 
+            textWrap="true" 
+            textAlignment="center">
+            </Label>
         </StackLayout>
 
-        <StackLayout row="0" col="1"
-         style="width: 100%;height: 100%;padding-left: 5;padding-right: 10; padding-top: 10; padding-bottom: 5;">
-                <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/workshops')" style="background-color: rgba(255, 23, 68, 0.79);">
-                    <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                        <Label text="&#xf11c;" class="fa" style="color: white;font-size: 58;"></Label>
-                    </StackLayout>
-                    <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                        <Label text="Workshops" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                    </StackLayout>
-                </GridLayout>
+
+        <GridLayout row="1" col="0" rows="*, *, *" columns="*, *" style="height: 100%;">
+            <StackLayout row="0" col="0" style="width: 100%;height: 100%">
+                <StackLayout #sl1 (tap)="onNavItemTap('/schedule',sl1)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf017;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="Schedule" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
             </StackLayout>
 
-            <StackLayout row="1" col="0" 
-            style="width: 100%;height: 100%;padding-left: 10;padding-right: 5; padding-top: 5; padding-bottom: 5;">
-                <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/ng-girls')" style="background-color: rgba(255, 23, 68, 0.78);">
-                    <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                        <Label text="&#xf182;" class="fa" style="color: white;font-size: 68;"></Label>
-                    </StackLayout>
-                    <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                        <Label text="ngGirls" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                    </StackLayout>
-                </GridLayout>
+            <StackLayout row="0" col="1" style="width: 100%;height: 100%">
+                <StackLayout  #sl2 (tap)="onNavItemTap('/workshops', sl2)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="Workshops" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
             </StackLayout>
-    
-            <StackLayout row="1" col="1"
-             style="width: 100%;height: 100%;padding-left: 5;padding-right: 10; padding-top: 5; padding-bottom: 5;">
-                    <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/speakers')" style="background-color: rgba(255, 23, 68, 0.77);">
-                        <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                            <Label android:text="&#xf0c0;" ios:text="&#xf406;" class="fa" style="color: white;font-size: 68;"></Label>
-                        </StackLayout>
-                        <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                            <Label text="Speakers" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                        </StackLayout>
-                    </GridLayout>
-                </StackLayout>
 
-                <StackLayout row="2" col="0" 
-                style="width: 100%;height: 100%;padding-left: 10;padding-right: 5; padding-top: 5; padding-bottom: 10;">
-                    <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/info')" style="background-color: rgba(255, 23, 68, 0.76);">
-                        <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                            <Label  text="&#xf05a;" class="fa" style="color: white;font-size: 68;"></Label>
-                        </StackLayout>
-                        <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                            <Label text="Info" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                        </StackLayout>
-                    </GridLayout>
+            <StackLayout row="1" col="0" style="width: 100%;height: 100%">
+                <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls',sl3)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf182;" class="fa" style="color: #3949ab ;font-size: 52;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="ngGirls" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
                 </StackLayout>
-        
-                <StackLayout row="2" col="1"
-                 style="width: 100%;height: 100%;padding-left: 5;padding-right: 10; padding-top: 5; padding-bottom: 10;">
-                        <GridLayout columns="*" rows="auto,*" (tap)="onNavItemTap('/about')" style="background-color: rgba(255, 23, 68, 0.75);">
-                            <StackLayout col="0" row="0" verticalAlignment="bottom" horizontalAlignment="center" style="height: 60%;">
-                                <Label android:text="&#xf121;" ios:text="&#xf0eb;" class="fa" style="color: white;font-size: 58;"></Label>
-                            </StackLayout>
-                            <StackLayout col="0" row="1" verticalAlignment="middle" horizontalAlignment="center" style="height: 40%;">
-                                <Label text="About" style="color: white;font-size: 18;font-weight: bold;"></Label>
-                            </StackLayout>
-                        </GridLayout>
-                    </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="1" col="1" style="width: 100%;height: 100%">
+                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="Speakers" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="2" col="0" style="width: 100%;height: 100%">
+                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf05a;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="Info" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="2" col="1" style="width: 100%;height: 100%">
+                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)" style="background-color: white;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center">
+                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                        textAlignment="center"></Label>
+                    <Label text="About" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
+            </StackLayout>
+
+        </GridLayout>
     </GridLayout>
+
 
 </ScrollView>
