--- a/src/app/workshops/components/workshop/workshop.component.html
+++ b/src/app/workshops/components/workshop/workshop.component.html
@@ -4,12 +4,12 @@
             horizontalAlignment="center" verticalAlignment="center" style="padding: 10 20;">
             <Label [text]="workshop.title" fontWeight="bold" fontSize="16" verticalAlignment="center" textAlignment="left"
                 textWrap="true" col="1" row="0" style="color: #ff1744;"></Label>
-            <Label [text]="'by '+ workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
-                style="color: #3949ab;"></Label>
+            <Label [text]="workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
+                style="color: #3949ab;" (tap)="showModal()"></Label>
 
             <Image [src]="workshop.instructor.photo.getImageUrl()" row="0" col="0" rowSpan="2"
             borderRadius="500" horizontalAlignment="center" width="auto" verticalAlignment="center"
-            height="98%" style="margin-right: 15;"></Image>
+            height="98%" style="margin-right: 15;" (tap)="showModal()"></Image>
 
             <Label [text]="workshop.description" textWrap="true" textAlignment="left" verticalAlignment="center"
                 fontSize="14" col="0" row="2" colSpan="2" style="color: #3C4043;padding-top: 15;"></Label>
