--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,23 +13,30 @@
     </ActionItem>
     <Label class="action-bar-title" text="ngPolandConf" fontSize="18"></Label>
 </ActionBar>
-<ScrollView>
-    <GridLayout rows="120, *" columns="*" style="height: 100%;">
-        <StackLayout row="0" col="0" style="background-color: #3949ab;height: 120;width: 100%;" verticalAlignment="middle"
-            horizontalAlignment="center">
-            <Label text="Welcome to ngPoland Conference." style="color: white;font-size: 18;padding-left: 10;padding-right: 10;"
+<ScrollView style="background-color: #F1F3F4;">
+    <GridLayout rows="auto, *" columns="*" style="height: 100%;">
+        <StackLayout *ngIf="!isLandscape" row="0" col="0" style="background-color: #3949ab;height: 120;width: 100%;"
+            verticalAlignment="middle" horizontalAlignment="center">
+            <Label text="Welcome to ngPoland Conference." style="color: white;font-size: 16;padding-left: 10;padding-right: 10;"
                 textWrap="true" textAlignment="center">
             </Label>
-            <Label text="The biggest Angular Conference in CEE." style="color: white;font-size: 18;margin-top: 5;" 
-            textWrap="true" 
-            textAlignment="center">
+            <Label text="The biggest Angular Conference in CEE." style="color: white;font-size: 16;margin-top: 5;padding-left: 10;padding-right: 10;"
+                textWrap="true" textAlignment="center">
             </Label>
         </StackLayout>
 
+        <StackLayout *ngIf="isLandscape" row="0" col="0" style="background-color: #3949ab;height: 70;width: 100%;"
+            verticalAlignment="middle" horizontalAlignment="center">
+            <Label text="Welcome to ngPoland Conference, the biggest Angular Conference in CEE." style="color: white;font-size: 16;padding-left: 10;padding-right: 10;"
+                textWrap="true" textAlignment="center">
+            </Label>
 
-        <GridLayout row="1" col="0" rows="*, *, *" columns="*, *" style="height: 100%;">
+        </StackLayout>
+
+
+        <GridLayout *ngIf="!isLandscape" row="1" col="0" rows="*, *, *" columns="*, *" style="height: 100%;">
             <StackLayout row="0" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl1 (tap)="onNavItemTap('/schedule',sl1)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl1 (tap)="onNavItemTap('/schedule',sl1)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
                     <Label text="&#xf017;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
                         textAlignment="center"></Label>
@@ -38,16 +45,16 @@
             </StackLayout>
 
             <StackLayout row="0" col="1" style="width: 100%;height: 100%">
-                <StackLayout  #sl2 (tap)="onNavItemTap('/workshops', sl2)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
-                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
                         textAlignment="center"></Label>
                     <Label text="Workshops" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="1" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls',sl3)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls',sl3)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
                     <Label text="&#xf182;" class="fa" style="color: #3949ab ;font-size: 52;margin-bottom: 10;"
                         textAlignment="center"></Label>
@@ -56,16 +63,16 @@
             </StackLayout>
 
             <StackLayout row="1" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
-                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
                         textAlignment="center"></Label>
                     <Label text="Speakers" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
                 </StackLayout>
             </StackLayout>
 
             <StackLayout row="2" col="0" style="width: 100%;height: 100%">
-                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
                     <Label text="&#xf05a;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
                         textAlignment="center"></Label>
@@ -74,11 +81,75 @@
             </StackLayout>
 
             <StackLayout row="2" col="1" style="width: 100%;height: 100%">
-                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)" style="background-color: white;height: 100%;width: 100%;"
+                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
                     verticalAlignment="middle" horizontalAlignment="center">
-                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 50;margin-bottom: 10;"
+                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 48;margin-bottom: 10;"
                         textAlignment="center"></Label>
                     <Label text="About" style="color: #ff1744;font-size: 14;" textAlignment="center"></Label>
+                </StackLayout>
+            </StackLayout>
+
+        </GridLayout>
+
+
+
+        <GridLayout *ngIf="isLandscape" row="1" col="0" rows="*, *" columns="*, *, *" style="height: 100%;">
+            <StackLayout row="0" col="0" style="width: 100%;height: 100%">
+                <StackLayout #sl1 (tap)="onNavItemTap('/schedule',sl1)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf017;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="Schedule" style="color: #ff1744;font-size: 13;" textAlignment="center"
+                        verticalAlignment="middle"></Label>
+                </StackLayout>
+
+            </StackLayout>
+
+            <StackLayout row="0" col="1" style="width: 100%;height: 100%">
+                <StackLayout #sl2 (tap)="onNavItemTap('/workshops', sl2)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf11c;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="Workshops" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                        verticalAlignment="middle"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="0" col="2" style="width: 100%;height: 100%">
+                <StackLayout #sl3 (tap)="onNavItemTap('/ng-girls',sl3)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf182;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="ngGirls" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                        verticalAlignment="middle"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="1" col="0" style="width: 100%;height: 100%">
+                <StackLayout #sl4 (tap)="onNavItemTap('/speakers', sl4)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf0c0;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="Speakers" style="color: #ff1744;font-size: 14;" textAlignment="center"
+                        verticalAlignment="middle"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="1" col="1" style="width: 100%;height: 100%">
+                <StackLayout #sl5 (tap)="onNavItemTap('/info', sl5)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf05a;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="Info" style="color: #ff1744;font-size: 14;" textAlignment="center" verticalAlignment="middle"></Label>
+                </StackLayout>
+            </StackLayout>
+
+            <StackLayout row="1" col="2" style="width: 100%;height: 100%">
+                <StackLayout #sl6 (tap)="onNavItemTap('/about', sl6)" style="background-color: #F1F3F4;height: 100%;width: 100%;"
+                    verticalAlignment="middle" horizontalAlignment="center" orientation="horizontal">
+                    <Label text="&#xf121;" class="fa" style="color: #3949ab ;font-size: 34;margin-right: 10;"
+                        textAlignment="center" verticalAlignment="middle"></Label>
+                    <Label text="About" style="color: #ff1744;font-size: 14;" textAlignment="center" verticalAlignment="middle"></Label>
                 </StackLayout>
             </StackLayout>
 
