--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -9,18 +9,18 @@
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
-    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left" >
+    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" text="Schedule" fontSize="16"></Label>
+    <Label class="action-bar-title" text="Schedule" fontSize="16" id="abScheduleText"></Label>
 </ActionBar>
 
-<TabView selectedIndex="0" sdkExampleTitle sdkToggleNavButton androidTabsPosition="bottom" iosIconRenderingMode="alwaysOriginal" textTransform="none">
-  
-    <StackLayout *tabItem="{title: 'NG Poland', iconSource: 'res://ngpolandlogo'}" >
+<TabView selectedIndex="0" sdkExampleTitle sdkToggleNavButton androidTabsPosition="bottom" iosIconRenderingMode="alwaysOriginal"
+    textTransform="none" (selectedIndexChanged)="onSelectedIndexChanged($event)">
+
+    <StackLayout *tabItem="{title: 'NG Poland', iconSource: 'res://ngpolandlogo'}">
         <NgPoland></NgPoland>
     </StackLayout>
-    <StackLayout *tabItem="{title: 'JS Poland',  iconSource: 'res://jspolandlogo'}" >
+    <StackLayout *tabItem="{title: 'JS Poland',  iconSource: 'res://jspolandlogo'}">
         <JsPoland></JsPoland>
     </StackLayout>
 </TabView>
