--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
                 </GridLayout>
 
                 <GridLayout columns="auto, *" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/speakers')" (tap)="onNavItemTap('/speakers')">
-                    <Label col="0" android:text="&#xf0c0;" ios:text="&#xf406;" class="fa" style="margin-left: 10;text-align: center;"></Label>
+                    <Label col="0" android:text="&#xf0c0;" ios:text="&#xf0c0;" class="fa" style="margin-left: 10;text-align: center;"></Label>
                     <Label col="1" text="Speakers" class="p-r-10"></Label>
                 </GridLayout>
 
@@ -47,7 +47,7 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
                 <StackLayout class="hr-light"></StackLayout>
 
                 <GridLayout columns="auto, *" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/about')" (tap)="onNavItemTap('/about')">
-                    <Label col="0" android:text="&#xf121;" ios:text="&#xf0eb;" class="fa" style="margin-left: 10;text-align: center;"></Label>
+                    <Label col="0" android:text="&#xf121;" ios:text="&#xf121;" class="fa" style="margin-left: 10;text-align: center;"></Label>
                     <Label col="1" text="About" class="p-r-10"></Label>
                 </GridLayout>
             </StackLayout>
