about Sebek details

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,7 +25,7 @@
         <GridLayout rows="30, 80, 80" columns="70, *" style="margin-top: 15;margin-bottom: 15;">
             <Label row="0" col="0" colSpan="2"  text="Authors:" textWrap="true" style="color: #ff1744;font-size: 14;" ></Label>
             <Image row="1" col="0" src="res://sd" borderRadius="200" horizontalAlignment="center" width="60" height="60"
-             ></Image>
+            (tap)="showSebekDetails()"></Image>
             <Label row="1" col="1" text="Sebastian Denis"  fontSize="14" verticalAlignment="center" textAlignment="left"
             style="color: #3C4043;margin-left: 15;"  (tap)="showSebekDetails()" ></Label>
             <Image row="2" col="0" src="res://dk" borderRadius="200" horizontalAlignment="center" width="60" height="60"
