--- a/src/app/shared/components/speaker-details/speaker-details.component.html
+++ b/src/app/shared/components/speaker-details/speaker-details.component.html
@@ -6,11 +6,11 @@
       
                         <GridLayout columns="*" rows="auto, auto">
                             <FlexboxLayout width="auto" height="380" flexDirection="column" style="padding: 10 20;" col="0" row="0">
-                                <FlexboxLayout height="13%" flexDirection="column" alignItems="center" justifyContent="center">
+                                <FlexboxLayout height="20%" flexDirection="column" alignItems="center" justifyContent="center">
                                     <Label [text]="speaker.name" fontWeight="bold" fontSize="22" verticalAlignment="center"
-                                        textAlignment="center" style="color: #ff1744;"></Label>
+                                        textAlignment="center" textWrap="true" style="color: #ff1744;width: 80%;"></Label>
                                 </FlexboxLayout>
-                                <FlexboxLayout height="87%" flexDirection="column" justifyContent="space-around" alignItems="center">
+                                <FlexboxLayout height="80%" flexDirection="column" justifyContent="space-around" alignItems="center">
                                     <FlexboxLayout height="80%" flexDirection="column" alignItems="center" justifyContent="center">
                                         <Image [src]="speaker.photo.getImageUrl()" horizontalAlignment="center" width="auto" height="90%"></Image>
                                     </FlexboxLayout>
