--- a/src/app/speakers/components/speaker/speaker.component.html
+++ b/src/app/speakers/components/speaker/speaker.component.html
@@ -1,8 +1,13 @@
 <StackLayout style="padding: 10 5;" #sl (tap)="showModal(sl)">
     <StackLayout class="cardStyle2" style="margin: 5;">
         <GridLayout rows="auto, *" columns="100, *" style="padding: 5 5;">
-            <Image row="0" col="0" rowSpan="2" [src]="speaker.photo.getImageUrl()" borderRadius="500"
-                horizontalAlignment="center" width="auto" height="95%" style="margin-right: 15;"></Image>
+            <StackLayout row="0" col="0" rowSpan="2"> 
+                    <WebImage stretch="aspectFit" borderRadius="500"
+                    horizontalAlignment="center"  style="margin-right: 15;"
+                 src="{{speaker.photo.getImageUrl()}}">
+    </WebImage>
+            </StackLayout>
+            
             <Label row="0" col="1" [text]="speaker.name" fontWeight="bold" fontSize="14" verticalAlignment="center"
                 textAlignment="left" style="color: #3C4043;"></Label>
             <Label row="1" col="1" [text]="speaker.role" textWrap="true" textAlignment="left" fontSize="12" style="color: #3C4043;"></Label>
