--- a/src/app/workshops/components/workshop/workshop.component.html
+++ b/src/app/workshops/components/workshop/workshop.component.html
@@ -7,9 +7,12 @@
             <Label [text]="workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
                 style="color: #3949ab;" (tap)="showModal()"></Label>
 
-            <Image [src]="workshop.instructor.photo.getImageUrl()" row="0" col="0" rowSpan="2"
-            borderRadius="500" horizontalAlignment="center" width="auto" verticalAlignment="center"
-            height="98%" style="margin-right: 15;" (tap)="showModal()"></Image>
+            <WebImage borderRadius="500" row="0" col="0" rowSpan="2" stretch="aspectFill"
+            horizontalAlignment="center" verticalAlignment="center" style="margin-right: 15;"
+            [src]="workshop.instructor.photo.getImageUrl()" (tap)="showModal()"
+            height="98%" width="auto"
+            >
+</WebImage>
 
             <Label [text]="workshop.description" textWrap="true" textAlignment="left" verticalAlignment="center"
                 fontSize="14" col="0" row="2" colSpan="2" style="color: #3C4043;padding-top: 15;" 
