ios web image caching

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,7 +13,7 @@
     </ActionItem>
     <Label class="action-bar-title" text="About"></Label>
 </ActionBar>
-
+<GridLayout class="page page-content">
 <ScrollView>
 
 
@@ -46,3 +46,5 @@
     </StackLayout>
 
 </ScrollView>
+
+</GridLayout>
