--- a/src/app/workshops/components/workshop/workshop.component.html
+++ b/src/app/workshops/components/workshop/workshop.component.html
@@ -1,23 +1,83 @@
-<StackLayout style="padding: 10 10;">
-    <StackLayout class="cardStyle2" >
-        <GridLayout columns="70, *" rows="auto, 30, auto, 15" width="auto" height="auto" width="100%" backgroundColor="#ffffff"
-            horizontalAlignment="center" verticalAlignment="center" style="padding: 10 20;" textAlignment="left">
-            <Label [text]="workshop.title" fontWeight="bold" fontSize="16" verticalAlignment="center" textAlignment="left"
-                textWrap="true" col="1" row="0" style="color: #ff1744;"></Label>
-            <Label [text]="workshop.instructor.name" col="1" row="1" verticalAlignment="center" textAlignment="left"
-                style="color: #3949ab;" (tap)="showModal()"></Label>
+<StackLayout style="padding: 10 5;">
+  <StackLayout class="cardStyle2">
+    <GridLayout
+      columns="70, *"
+      rows="auto, 30, auto, 15"
+      width="auto"
+      height="auto"
+      width="100%"
+      backgroundColor="#ffffff"
+      horizontalAlignment="center"
+      verticalAlignment="center"
+      style="padding: 10 20;"
+      textAlignment="left"
+    >
+      <label
+        [text]="workshop.title"
+        fontWeight="bold"
+        fontSize="16"
+        verticalAlignment="center"
+        textAlignment="left"
+        textWrap="true"
+        col="1"
+        row="0"
+        style="color: #ff1744;"
+      ></label>
+      <label
+        [text]="workshop.instructor.name"
+        col="1"
+        row="1"
+        verticalAlignment="center"
+        textAlignment="left"
+        style="color: #3949ab;"
+        (tap)="showModal()"
+      ></label>
 
-            <WebImage borderRadius="500" row="0" col="0" rowSpan="2" stretch="aspectFill"
-            horizontalAlignment="center" verticalAlignment="center" style="margin-right: 15;"
-            [src]="workshop.instructor.photo.getImageUrl()" (tap)="showModal()"
-            height="98%" width="auto"
-            >
-</WebImage>
+      <WebImage
+        borderRadius="500"
+        row="0"
+        col="0"
+        rowSpan="2"
+        stretch="aspectFill"
+        horizontalAlignment="center"
+        verticalAlignment="center"
+        style="margin-right: 15;"
+        [src]="workshop.instructor.photo.getImageUrl()"
+        (tap)="showModal()"
+        height="98%"
+        width="auto"
+        android:visibility="collapsed"
+      >
+      </WebImage>
+      <image
+        borderRadius="500"
+        row="0"
+        col="0"
+        rowSpan="2"
+        stretch="aspectFill"
+        horizontalAlignment="center"
+        verticalAlignment="center"
+        style="margin-right: 15;"
+        [src]="workshop.instructor.photo.getImageUrl()"
+        (tap)="showModal()"
+        height="98%"
+        width="auto"
+        ios:visibility="collapsed"
+      >
+      </image>
 
-            <Label [text]="workshop.description" textWrap="true" textAlignment="left" verticalAlignment="center"
-                fontSize="14" col="0" row="2" colSpan="2" style="color: #3C4043;padding-top: 15;" 
-                horlizontalAlignmet="left"></Label>
-
-        </GridLayout>
-    </StackLayout>
+      <label
+        [text]="workshop.description"
+        textWrap="true"
+        textAlignment="left"
+        verticalAlignment="center"
+        fontSize="14"
+        col="0"
+        row="2"
+        colSpan="2"
+        style="color: #3C4043;padding-top: 15;"
+        horlizontalAlignmet="left"
+      ></label>
+    </GridLayout>
+  </StackLayout>
 </StackLayout>
